# openmultiboot

./: Makefile.am  README.md  compile.sh  configure.ac  omb_branding.h  omb_common.h  omb_framebuffer.c  omb_framebuffer.h  omb_freetype.c  omb_freetype.h  omb_icomoon_font.h  omb_input.c  omb_input.h  omb_lcd.c  omb_log.c  omb_log.h  omb_main.c  omb_menu.c  omb_menu.h  omb_utils.c  omb_utils.h
contrib/: open-multiboot-branding-helper.py
src/: Makefile.am  omb_branding.c  omb_branding.h  omb_common.h  omb_framebuffer.c  omb_framebuffer.h  omb_freetype.c  omb_freetype.h  omb_icomoon_font.h  omb_input.c  omb_input.h  omb_lcd.c  omb_lcd.h  omb_lcddot_font.h  omb_log.c  omb_log.h  omb_main.c  omb_menu.c  omb_menu.h  omb_segoe_ui_font.h  omb_utils.c  omb_utils.h
